<resources>
    <string name="app_name">TravelTrip</string>
    <string name="full_name">Full Name</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_in">Sign in</string>
    <string name="log_in">Log in</string>
    <string name="already_have_an_account">Already have an account ?</string>
    <string name="don_t_have_an_account">Don’t have an account ?</string>
    <string name="i_agree_with_the_privacy_and_policy">i Agree with the privacy and policy</string>
    <string name="travelTrip">TravelTrip</string>
    <string name="choose_the_country">Choose the country....</string>
    <string name="museums">Museums</string>
    <string name="kids">Kids</string>
    <string name="categories">Categories</string>
    <string name="all_trips">All Trips</string>
    <string name="amusement_parks">Amusement parks</string>
    <string name="discover">Discover</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hi_mike">Hi Mike</string>
    <string name="my_trips">My Trips</string>
    <string name="blog">Blog</string>
    <string name="top_trips">Top Trips</string>
    <string name="cusco_peru">Cisco Peru</string>
    <string name="inca_trail">Inca Trail</string>
    <string name="posts">Posts</string>
    <string name="profile">Profile</string>
    <string name="diary">Diary</string>
    <string name="home">Home</string>
    <string name="add_post">Add Post</string>
    <string name="state">State</string>
    <string name="post">Post:</string>
    <string name="location">location</string>
    <string name="save">Save</string>
    <string name="text">Text:</string>
    <string name="edit_post">Edit Post</string>
    <string name="mike_choen">Mike Choen</string>
    <string name="image_post">image post</string>
    <string name="the_hidden_gem_of_machu_picchu_tips_for_beating_the_crowds">The Hidden Gem of Machu Picchu: Tips for Beating the Crowds...</string>
    <string name="all_information_about_this_trip">all information about this trip</string>
    <string name="title_of_trip">Title of trip</string>
    <string name="cancel">Cancel</string>
    <string name="todo">TODO</string>
    <string name="enter_the_title">Enter the title...</string>
</resources>