<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_home"
        android:icon="@android:drawable/ic_input_add"
        android:title="@string/home"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_diary"
        android:icon="@drawable/diary_icon"
        android:title="@string/diary"
        app:iconTint="@null"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_discover"
        android:icon="@drawable/discover_icon"
        android:title="@string/discover"
        app:iconTint="@null"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_blogs"
        android:icon="@drawable/blog_icon"
        android:title="@string/blogs"
        app:iconTint="@null"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_profile"
        android:icon="@drawable/profile_icon"
        android:title="@string/profile"
        app:iconTint="@null"
        app:showAsAction="ifRoom" />

</menu>