<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tw"
        android:layout_width="138dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="35dp"
        android:fontFamily="@font/kanit_semibold"
        android:text="@string/add_post"
        android:textSize="32sp"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.945"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/addPost_layoutForImg"
        android:layout_width="283dp"
        android:layout_height="166dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/shape"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout3"
        android:layout_width="412dp"
        android:layout_height="274dp"
        app:layout_constraintBottom_toTopOf="@+id/saveBtn"
        tools:ignore="MissingConstraints,UnknownIdInLayout"
        tools:layout_editor_absoluteX="-1dp">

        <EditText
            android:id="@+id/text"
            android:layout_width="300dp"
            android:layout_height="93dp"
            android:layout_marginEnd="32dp"
            android:ems="10"
            android:gravity="top|start"
            android:inputType="textMultiLine"
            android:lines="4"
            android:maxLines="4"
            android:scrollbars="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.887"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title" />

        <EditText
            android:id="@+id/title"
            android:layout_width="300dp"
            android:layout_height="47dp"
            android:layout_marginEnd="32dp"
            android:ems="10"
            android:gravity="top|start"
            android:inputType="textMultiLine"
            android:lines="2"
            android:maxLines="2"
            android:scrollbars="vertical"
            app:layout_constraintBottom_toTopOf="@+id/text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.857"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/state" />

        <EditText
            android:id="@+id/state"
            android:layout_width="107dp"
            android:layout_height="29dp"
            android:ems="10"
            android:inputType="text"
            android:paddingTop="2dp"
            android:paddingBottom="2dp"
            android:text="@string/state"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@+id/title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.872"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/city" />

        <EditText
            android:id="@+id/city"
            android:layout_width="107dp"
            android:layout_height="29dp"
            android:ems="10"
            android:inputType="text"
            android:paddingTop="2dp"
            android:paddingBottom="2dp"
            android:text="City"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@+id/state"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.868"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:text="Title:"
            app:layout_constraintBaseline_toBaselineOf="@+id/title"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:text="@string/text"
            app:layout_constraintBaseline_toBaselineOf="@+id/text"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/saveBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="72dp"
        android:backgroundTint="#5FA3AC"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="408dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        app:layout_constraintBottom_toTopOf="@+id/addPost_layoutForImg"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints,UnknownIdInLayout"
        tools:layout_editor_absoluteX="1dp">

        <TextView
            android:id="@+id/userName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="John Deo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.004"
            app:layout_constraintStart_toEndOf="@+id/cardView2"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView2"
            android:layout_width="54dp"
            android:layout_height="49dp"
            android:layout_marginStart="44dp"
            app:cardCornerRadius="100dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/profile_pic" />
            </FrameLayout>
        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>